--- a/client/src/styles/modal.css
+++ b/client/src/styles/modal.css
@@ -1,89 +1,98 @@
 .modal {
-    background-color: white;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 90%;
-    max-width: 400px;
-  }
-  
-  .modal-wrapper {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1000;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-  }
-  
-  .modal-header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 20px;
-  }
-  
-  .modal-close {
-    position: absolute;
-    top: -10px;
-    right: -10px;
-    font-size: 20px;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .modal h2 {
-    margin: 0 0 1rem;
-    font-size: 1.5rem;
-    text-align: center;
-  }
-  
-  .modal form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .modal input {
-    padding: 0.5rem;
-    margin-bottom: 1rem;
-    font-size: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .modal button {
-    cursor: pointer;
-    padding: 0.5rem;
-    font-size: 1rem;
-    border: none;
-    border-radius: 4px;
-  }
-  
-  .modal button[type="submit"] {
-    background-color: #3498db;
-    color: white;
-    margin-bottom: 1rem;
-  }
-  
-  .modal button[type="button"] {
-    background: none;
-    color: #3498db;
-    border: 0;
-  }
-  
-  .modal__text {
-    text-align: center;
-  }
-  
-  .modal-backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-  
+  background-color: white;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 90%;
+  max-width: 400px;
+  min-width: 280px;
+}
+
+.modal-wrapper {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.modal__header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 20px;
+}
+
+.modal__close {
+  position: absolute;
+  top: -5px;
+  right: -1px;
+  font-size: 30px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  color:rgba(0, 0, 0, 0.5)
+}
+
+.modal__title {
+  margin: 0 0 1rem;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.modal__form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal__input {
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.modal .modal__button {
+  cursor: pointer;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 4px;
+}
+
+.modal .modal__button--submit {
+  background-color: #3498db;
+  color: white;
+  margin-bottom: 1rem;
+}
+
+.modal .modal__button--switch {
+  background: none;
+  color: #3498db;
+  border: 0;
+}
+
+
+.modal__text {
+  text-align: center;
+}
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
